# sheepit

./: Cargo.toml  README.md  sheepit.toml
src/: cli.rs  config.rs  error.rs  file.rs  lib.rs  main.rs  project.rs  repo.rs  script.rs  token.rs  transform.rs  version.rs
src/config/: finder.rs  opener.rs
src/project/: operation.rs  project_version.rs  strings.rs  temp.rs
src/repo/: branch.rs  clone.rs  commit.rs  open.rs  options.rs  path.rs  reference.rs  remote.rs  ssh.rs  tag.rs
src/transform/: file_transform.rs  project_transform.rs
src/version/: bump.rs  list.rs  update.rs
