[package]
name = "sheepit"
description = "A simple rust tool for releasing projects 🚀"

edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/ncipollo/sheepit"
version = "0.0.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.17.2"
git2-ext = "0.6.0"
lenient_semver = "0.4.2"
rpassword = "7.2"
semver = "1.0.18"
shellexpand = "3.1.0"
tempfile = "3"
uuid = { version = "1.4.1", features = ["v4"] }

[dev-dependencies]
mockall = { git = "https://github.com/asomers/mockall" }
