[package]
name = "sheepit"
description = "A simple rust tool for releasing projects 🚀"

edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/ncipollo/sheepit"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
clap = { version = "4.3.23", features = ["derive", "string"] }
clap_complete_command = "0.5.1"
git2 = "0.17.2"
git2-ext = "0.6.0"
lenient_semver = "0.4.2"
mockall_double = "0.3.0"
parse-git-url = "0.5.1"
rpassword = "7.2"
semver = "1.0.18"
shellexpand = { version = "3.1.0", features = ["full"] }
tempfile = "3"
uuid = { version = "1.4.1", features = ["v4"] }

[dev-dependencies]
mockall = { git = "https://github.com/asomers/mockall" }
