[package]
name = "sheepit"
description = "A simple rust tool for releasing projects 🚀"

edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/ncipollo/sheepit"
version = "0.1.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.23", features = ["derive", "string"] }
clap_complete_command = "0.5.1"
git2 = "0.17.2"
git2-ext = "0.6.0"
lenient_semver = "0.4.2"
mockall_double = "0.3.0"
parse-git-url = "0.5.1"
semver = "1.0.18"
serde = {version = "1.0.188", features = ["derive"]}
shellexpand = { version = "3.1.0", features = ["full"] }
tempfile = "3"
toml = "0.7.6"

[dev-dependencies]
mockall = { git = "https://github.com/asomers/mockall" }
